--- a/public/views_ejs/views/index.ejs
+++ b/public/views_ejs/views/index.ejs
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/main.js" defer type="module"></script>
+    <script src="/main.js" defer type="module"></script>ç
+    <script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js
+    " defer type="module"></script>
     <link rel="stylesheet" href="/styles.css">
     <title>Document</title>
 </head>
