--- a/public/views_ejs/views/messages.ejs
+++ b/public/views_ejs/views/messages.ejs
@@ -59,6 +59,7 @@
         />
         <input type="submit" id="boton" />
       </form>
+      <div id="compresion"></div>
       <div id="mensajes"></div>
     </div>
   </body>
