--- a/public/views_ejs/views/index.ejs
+++ b/public/views_ejs/views/index.ejs
@@ -31,7 +31,7 @@
             </tbody>
     </table>
     <%}else{%>
-        <p>NO HAY DATOS!</p>
+        <p>NO DATA!</p>
     <% } %>
     <a href="http://localhost:8080/api/">VOLVER</a>
 
