--- a/public/views_ejs/views/messages.ejs
+++ b/public/views_ejs/views/messages.ejs
@@ -9,58 +9,58 @@
     "></script>
     <script src="/main.js" defer type="module"></script>
     <link rel="stylesheet" href="/styles.css" />
-    <title>NUESTRO CHAT</title>
+    <title>NEW CHAT</title>
   </head>
   <body>
-    <h1>INGRESE SUS DATOS</h1>
+    <h1>ENTER YOUR INFORMATION</h1>
     <div class="contenedor">
       <form id="formu">
         <input
           type="text"
-          placeholder="INGRESE SU MAIL"
+          placeholder="ENTER YOUR EMAIL"
           id="mail"
           name="mail"
         />
         <input
           type="text"
-          placeholder="INGRESE SU NOMBRE"
-          id="nombre"
-          name="nombre"
+          placeholder="ENTER YOUR NAME"
+          id="name"
+          name="name"
         />
         <input
           type="text"
-          placeholder="INGRESE SU APELLIDO"
-          id="apellido"
-          name="apellido"
+          placeholder="ENTER YOUR LASTNAME"
+          id="lastname"
+          name="lastname"
         />
         <input
           type="text"
-          placeholder="INGRESE SU EDAD"
-          id="edad"
-          name="edad"
+          placeholder="ENTER YOUR AGE"
+          id="age"
+          name="age"
         />
         <input
           type="text"
-          placeholder="INGRESE SU NICK"
+          placeholder="ENTER YOUR NICK"
           id="nick"
           name="nick"
         />
         <input
           type="text"
-          placeholder="INGRESE UN AVATAR"
+          placeholder="ENTER AN AVATAR"
           id="avatar"
           name="avatar"
         />
         <input
           type="text"
           id="text"
-          placeholder="INGRESE SU MENSAJE"
+          placeholder="ENTER YOUR MESSAGE"
           name="text"
         />
         <input type="submit" id="boton" />
       </form>
-      <div id="compresion"></div>
-      <div id="mensajes"></div>
+      <div id="compression"></div>
+      <div id="messages"></div>
     </div>
   </body>
 </html>
