--- a/public/views_ejs/views/main.ejs
+++ b/public/views_ejs/views/main.ejs
@@ -14,7 +14,7 @@
 <body>
     <% if (name !== "") { %>
         <div class="nav">
-            <p>Bienvenido <%= name %></p>
+            <p>Welcome <%= name %></p>
             <form action="/api/logout" method="POST">
                 <button type="submit">LOGOUT</button>
             </form>
